--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
 	font-family: Roboto, sans-serif;
 }
 
+body {
+	margin: 0 auto auto;
+	width: 1522px;
+	background-color: #2172c3;
+}
+
 p.text {
 	hyphens: auto;
 	quotes: "“" "”";
