--- a/style.css
+++ b/style.css
@@ -187,6 +187,17 @@ a.menu-but:active {
  	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
+.content-info_block {
+	position: relative;
+	left: 350px;
+	margin: 32px;
+	margin-top: 0px;
+	height: 230px;
+	width: 700px;
+	padding-left: 40px;
+	padding-right: 40px;
+}
+
 .content-about {
 	margin: 32px;
 	margin-top: 0px;
@@ -207,7 +218,6 @@ a.menu-but:active {
 .content-about-text-data {
 	border-top: 1px dashed gray;
 	padding-top: 16px;
-	min-height: 271px;
 	text-align: justify;
 	color: #333333;
 }
