--- a/new/styles.css
+++ b/new/styles.css
@@ -19,33 +19,39 @@ header {
 }
 
 .logo {
+	flex-grow: 3;
+	flex-basis: 50%;
 	background-color: #e1e2e3;
 	text-align: center;
 	background-image: url(../img/water_texture.png);
-	flex-grow: 1;
-	font-size: 24px;
+	font-size: 26px;
 	color: #2172c3;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .logo h1 {
-	margin: 5% 0;
+	padding: 0 10px; 
+	flex-basis: 65%;
 	background-color: #e1e2e3;
 	opacity: 0.7;
 }
 
 .contacts {
-	padding: 12px;
+	padding: 0.9em;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	flex-wrap: wrap;
-	flex-basis: 25%;
+	flex-basis: 28%;
+	flex-grow: 2;
 	color: white;
-	font-size: 22px;
+	font-size: 20px;
 }
 
 .contacts :first-child {
-	align-self: center
+	align-self: center;
 }
 
 .contacts a {
@@ -54,11 +60,12 @@ header {
 
 .map {
 	text-align: center;
-	flex-basis: 15%;
+	flex-basis: 20%;
+	flex-grow: 1;
 }
 
 .map iframe {
-	border: 0;
+	border: 4px solid rgba(0,0,0,0.0);
 	width: 100%;
 	height: 100%;
 }
@@ -71,8 +78,9 @@ nav {
 	border-bottom: 18px solid #2885d7;
 }
 
+/*Nav buttons*/
 nav a {
-	padding: 1em;
+	padding: 0.7em;
 	font-size: 20px;
 	outline: none;
 	color: #ebeced;
@@ -80,10 +88,44 @@ nav a {
 }
 nav a:hover {
 	background-color: #4f98e1;
-	box-shadow: inset 0 -4px #1a5997;
+	box-shadow: inset 0 -5px #1a5997;
 }
 nav a:active {
 	background-color: #e1e2e3;
 	color: #333333;
-	box-shadow: inset 0 -4px #e1e2e3;
+	box-shadow: inset 0 -5px #e1e2e3;
+}
+
+.share {
+	align-self: center;
+	margin-left: auto;
+	margin-right: 0.3em;
+}
+
+@media (max-width: 735px) and (min-width: 500px) {
+	.contacts {
+		order: 1;	
+	}
+}
+
+@media (max-width: 1010px) {
+	.map iframe{
+		border: 0;
+	}
+}
+
+@media (max-width: 580px) {
+	.logo h1 {
+		padding: 5% 0%;
+	}
+	
+	nav {
+		flex-direction: column;
+		text-align: center;
+	}
+	
+	nav a {
+		box-shadow: inset 0 1px #27619A;
+	}
+
 }
