--- a/new/styles.css
+++ b/new/styles.css
@@ -11,6 +11,7 @@ a {
 	text-decoration: none;
 }
 
+/*header*/
 header {
 	display: flex;
 	flex-flow: wrap;
@@ -78,7 +79,7 @@ nav {
 	border-bottom: 18px solid #2885d7;
 }
 
-/*Nav buttons*/
+/*header nav buttons*/
 nav a {
 	padding: 0.7em;
 	font-size: 20px;
@@ -102,19 +103,99 @@ nav a:active {
 	margin-right: 0.3em;
 }
 
-@media (max-width: 735px) and (min-width: 500px) {
+/*paper-blocks*/
+.paper-field {
+	background-color: #ebf2f9;
+	box-shadow: inset 0px 7px 7px -4px rgba(50, 50, 50, 0.8);
+	padding-top: 24px;
+}
+
+.paper-field h2 {
+	color: #181818;
+	padding: 0.5em 0;
+	border-bottom: 1px dashed gray;
+}
+
+.paper-field p {
+	padding: 0.7em 0;
+	text-align: justify;
+	text-indent: 1.5em;
+	color: #333333;
+	font-size: 20px;
+}
+
+.paper-field article{
+	background-color: white;
+ 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.paper-field aside {
+	flex-basis: 50%;
+	flex-grow: 1;
+	margin-right: 2em;
+}
+
+.paper-field img {
+	width: 500px;
+	height: 400px;
+	align-self: stretch;
+}
+
+.bckg_img {
+	background-position: right bottom;
+	background-repeat: no-repeat;
+	background-size: 250px 250px;
+}
+
+/*ads*/
+.ads {
+	margin: 0 auto;
+	width: 60%;
+	padding: 0 2em;
+}
+
+/*main_info*/
+.main_info {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 24px;
+	padding-left: 2em;
+}
+
+/*media*/
+@media (max-width: 745px) and (min-width: 500px) {
+	/*header+nav*/
 	.contacts {
 		order: 1;	
 	}
+	
+	/**/
 }
 
 @media (max-width: 1010px) {
+	/*header+nav*/
 	.map iframe{
 		border: 0;
+	}
+	
+	/*paper-blocks*/
+	.ads {
+		width: 95%;
+	}
+
+	.main_info {
+		margin: 24px auto;
+		width: 95%;	
+	}
+	
+	.main_info img {
+		display: none;
 	}
 }
 
 @media (max-width: 580px) {
+	/*header+nav*/
 	.logo h1 {
 		padding: 5% 0%;
 	}
@@ -127,5 +208,6 @@ nav a:active {
 	nav a {
 		box-shadow: inset 0 1px #27619A;
 	}
-
+	
+	/**/
 }
