--- a/new/styles.css
+++ b/new/styles.css
@@ -4,6 +4,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: Roboto, sans-serif;
+	font-size: 21px;
 	box-sizing: border-box;
 }
 
@@ -25,7 +26,6 @@ header {
 	background-color: #e1e2e3;
 	text-align: center;
 	background-image: url(../img/water_texture.png);
-	font-size: 26px;
 	color: #2172c3;
 	display: flex;
 	flex-direction: column;
@@ -33,22 +33,20 @@ header {
 }
 
 .logo h1 {
-	padding: 0 10px; 
-	flex-basis: 65%;
+	font-size: 3em;
 	background-color: #e1e2e3;
 	opacity: 0.7;
 }
 
 .contacts {
-	padding: 0.9em;
+	padding: 0.5em;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	flex-wrap: wrap;
 	flex-basis: 28%;
 	flex-grow: 2;
 	color: white;
-	font-size: 20px;
+	font-size: 1em;
 }
 
 .contacts :first-child {
@@ -61,7 +59,7 @@ header {
 
 .map {
 	text-align: center;
-	flex-basis: 20%;
+	flex-basis: 22%;
 	flex-grow: 1;
 }
 
@@ -74,6 +72,7 @@ header {
 nav {
 	width: 100%;
 	display: inline-flex;
+	flex-wrap: wrap;
 	justify-content: center-left;
 	background-color: #2172c3;
 	border-bottom: 18px solid #2885d7;
@@ -82,7 +81,7 @@ nav {
 /*header nav buttons*/
 nav a {
 	padding: 0.7em;
-	font-size: 20px;
+	font-size: 1em;
 	outline: none;
 	color: #ebeced;
 	transition-duration: 0.1s;
@@ -121,7 +120,7 @@ nav a:active {
 	text-align: justify;
 	text-indent: 1.5em;
 	color: #333333;
-	font-size: 20px;
+	font-size: 1em;
 }
 
 .paper-field article{
@@ -163,51 +162,20 @@ nav a:active {
 	padding-left: 2em;
 }
 
-/*media*/
-@media (max-width: 745px) and (min-width: 500px) {
-	/*header+nav*/
-	.contacts {
-		order: 1;	
+@media (max-width:600px) {
+	/*header*/
+	header {
+		flex-direction: column;
 	}
-	
-	/**/
-}
-
-@media (max-width: 1010px) {
-	/*header+nav*/
-	.map iframe{
-		border: 0;
-	}
-	
-	/*paper-blocks*/
-	.ads {
-		width: 95%;
-	}
-
-	.main_info {
-		margin: 24px auto;
-		width: 95%;	
-	}
-	
-	.main_info img {
-		display: none;
-	}
-}
-
-@media (max-width: 580px) {
-	/*header+nav*/
-	.logo h1 {
-		padding: 5% 0%;
+	.logo {
+		font-size: 0.7em;
 	}
 	
 	nav {
 		flex-direction: column;
-		text-align: center;
 	}
-	
 	nav a {
-		box-shadow: inset 0 1px #27619A;
+		text-align: center;
+		box-shadow: inset 0 2px #185591;
 	}
-	
-	/**/
 }
