--- a/new/styles.css
+++ b/new/styles.css
@@ -21,8 +21,7 @@ header {
 }
 
 .logo {
-	flex-grow: 3;
-	flex-basis: 50%;
+	flex: 3 50%;
 	background-color: #e1e2e3;
 	text-align: center;
 	background-image: url(../img/water_texture.png);
@@ -33,6 +32,7 @@ header {
 }
 
 .logo h1 {
+	padding: 0.1em 0;
 	font-size: 3em;
 	background-color: #e1e2e3;
 	opacity: 0.7;
@@ -42,9 +42,7 @@ header {
 	padding: 0.5em;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
-	flex-basis: 28%;
-	flex-grow: 2;
+	flex: 2 28%;
 	color: white;
 	font-size: 1em;
 }
@@ -59,8 +57,7 @@ header {
 
 .map {
 	text-align: center;
-	flex-basis: 22%;
-	flex-grow: 1;
+	flex: 1 22%;
 }
 
 .map iframe {
@@ -104,20 +101,23 @@ nav a:active {
 
 /*paper-blocks*/
 .paper-field {
+	padding: 1em;
+	padding-top: 0;
 	display: flex;
-	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: space-around;
 	background-color: #ebf2f9;
 	box-shadow: inset 0px 7px 7px -4px rgba(50, 50, 50, 0.8);
 }
 
 .paper-field h2 {
 	color: #181818;
-	padding: 0.5em 0;
+	padding: 0.5em 2em;
 	border-bottom: 1px dashed gray;
 }
 
 .paper-field p {
-	padding: 0.7em 0;
+	padding: 0.7em 2em;
 	text-align: justify;
 	text-indent: 1.5em;
 	color: #333333;
@@ -125,20 +125,19 @@ nav a:active {
 }
 
 .paper-field article{
+	margin-top: 1em;
 	background-color: white;
  	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .paper-field aside {
-	flex-basis: 50%;
-	flex-grow: 1;
-	margin-right: 2em;
+	flex: 1 50%;
 }
 
 .paper-field img {
 	width: 500px;
 	height: 400px;
-	align-self: stretch;
+	margin: 0 auto;
 }
 
 .bckg_img {
@@ -148,19 +147,17 @@ nav a:active {
 }
 
 /*ads*/
-.ads {
-	width: 60%;
-}
+.ads { max-width: 800px;}
 
 /*main_info*/
 .main_info {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
-	padding-left: 2em;
 }
 
+
 @media (max-width:600px) {
+	
 	/*header*/
 	header {
 		flex-direction: column;
@@ -168,7 +165,6 @@ nav a:active {
 	.logo {
 		font-size: 0.7em;
 	}
-	
 	nav {
 		flex-direction: column;
 	}
@@ -178,7 +174,10 @@ nav a:active {
 	}
 	
 	/*papers*/
-	article img {
+	.paper-field {padding: 0;}
+	.paper-field h2 {padding: 0.5em 0.4em;}
+	.paper-field p {padding: 0.7em 0.4em;}
+		article img {
 		display: none;
 	}
 }
