--- a/new/styles.css
+++ b/new/styles.css
@@ -121,7 +121,7 @@ nav a:active {
 	text-align: justify;
 	text-indent: 1.5em;
 	color: #333333;
-	font-size: 0.7em;
+	font-size: 1em;
 }
 
 .paper-field article{
@@ -159,15 +159,9 @@ nav a:active {
 @media (max-width:600px) {
 	
 	/*header*/
-	header {
-		flex-direction: column;
-	}
-	.logo {
-		font-size: 0.7em;
-	}
-	nav {
-		flex-direction: column;
-	}
+	header {flex-direction: column;}
+	.logo {font-size: 0.7em;}
+	nav {flex-direction: column;}
 	nav a {
 		text-align: center;
 		box-shadow: inset 0 2px #185591;
@@ -176,7 +170,10 @@ nav a:active {
 	/*papers*/
 	.paper-field {padding: 0;}
 	.paper-field h2 {padding: 0.5em 0.4em;}
-	.paper-field p {padding: 0.7em 0.4em;}
+	.paper-field p {
+		padding: 0.7em 0.4em;
+		font-size: 0.8em;
+		}
 		article img {
 		display: none;
 	}
