--- a/new/styles.css
+++ b/new/styles.css
@@ -56,13 +56,13 @@ header {
 	flex: 1 22%;
 }
 
-.map iframe {
+.map * {
 	border: 4px solid rgba(0,0,0,0.0);
 	width: 100%;
 	height: 100%;
 }
 
-nav {
+nav.header-nav {
 	width: 100%;
 	display: inline-flex;
 	flex-wrap: wrap;
@@ -72,18 +72,18 @@ nav {
 }
 
 /*header nav buttons*/
-nav a {
+nav.header-nav a {
 	padding: 0.7em;
 	font-size: 1em;
 	outline: none;
 	color: #ebeced;
 	transition-duration: 0.1s;
 }
-nav a:hover {
+nav.header-nav a:hover {
 	background-color: #4f98e1;
 	box-shadow: inset 0 -5px #1a5997;
 }
-nav a:active {
+nav.header-nav a:active {
 	background-color: #e1e2e3;
 	color: #333333;
 	box-shadow: inset 0 -5px #e1e2e3;
@@ -108,6 +108,11 @@ nav a:active {
 	border-bottom: 1px dashed gray;
 }
 
+h2.info-title {
+	text-align: center;
+	font-size: 1.45em;
+}
+
 .paper-field p {
 	padding: 0.7em 2em;
 	text-align: justify;
@@ -126,13 +131,37 @@ nav a:active {
 }
 
 .paper-field aside {
-	flex: 1 50%;
+	flex: 1 60%;
 }
 
 .paper-field img {
 	width: 500px;
 	height: 400px;
 	margin: 0 auto;
+}
+
+nav.paper-nav {
+	border-left: 1px solid #ebeced;
+	border-right: 1px solid #ebeced;
+	display: flex;
+	flex-grow: 1;
+	flex-direction: column;
+}
+
+nav.paper-nav a {
+	text-align: center;
+	padding: 1em;
+	outline: none;
+	color: #333333;
+	border-bottom: 1px solid #ebeced;
+	transition-duration: 0.1s;
+}
+nav.paper-nav a:hover {
+	background-color: #e1e2e3;
+}
+nav.paper-nav a:active {
+	background-color: #ebeced;
+	color: #4f98e1;
 }
 
 .bckg_img {
@@ -181,8 +210,8 @@ h3 {
 .services img {
 	margin-right: 0.5em;
 	border:8px solid white;
-    border-radius: 50%;
-    box-shadow: 0px 0px 0px 4px #5d9ddd;
+	border-radius: 50%;
+	box-shadow: 0px 0px 0px 4px #5d9ddd;
 	width: 250px;
 	height: 250px;
 }
@@ -234,8 +263,8 @@ footer {
 	/*header*/
 	header {flex-direction: column;}
 	.logo {font-size: 0.7em;}
-	nav {flex-direction: column;}
-	nav a {
+	nav.header-nav {flex-direction: column;}
+	nav.header-nav a {
 		text-align: center;
 		box-shadow: inset 0 2px #185591;
 	}
