fix services article in media css

--- a/new/styles.css
+++ b/new/styles.css
@@ -276,7 +276,7 @@ footer {
 	.main_info img {display: none;}
 	
 	/*services*/
-	.services article {padding:0.7em;}
+	.services article {padding: 0.7em 0;}
 	
 	/*additional*/
 	.additional img:last-child {display: none;}
