--- a/new/styles.css
+++ b/new/styles.css
@@ -61,7 +61,7 @@ header {
 	width: 100%;
 	height: 100%;
 	min-height: 130px;
-	background-image: url(view_map.png);
+	background-image: url(site/view_map.png);
 	background-position: center;
 	background-size: 800px;
 	transition: background-size 0.5s;
