--- a/style.css
+++ b/style.css
@@ -194,11 +194,11 @@ a.menu-but:active {
 	left: 320px;
 	margin: 32px;
 	margin-top: 0px;
-	height: 500px;
+	height: 300px;
 	width: 600px;
 	padding-left: 40px;
 	padding-right: 40px;
-	background-image: url(new/site/fir_tree.png);
+	/* background-image: url(new/site/fir_tree.png); */
 	background-repeat: no-repeat;
 	background-position: right bottom;
 	background-size: 200px;
