--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body {
 
 p.text {
 	hyphens: auto;
-	quotes: "“" "”";
+	quotes: "â€œ" "â€";
 	font-size: 20px;
 }
 
 p.serv_text {
 	hyphens: auto;
-	quotes: "“" "”";
+	quotes: "â€œ" "â€";
 	font-size: 22px;
 	text-align: justify;
 }
@@ -194,7 +194,7 @@ a.menu-but:active {
 	left: 320px;
 	margin: 32px;
 	margin-top: 0px;
-	height: 300px;
+	height: 250px;
 	width: 600px;
 	padding-left: 40px;
 	padding-right: 40px;
