--- a/new/styles.css
+++ b/new/styles.css
@@ -27,13 +27,15 @@ header {
 	background-image: url(../img/water_texture.png);
 	color: #2172c3;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	flex-wrap: nowrap;
 	justify-content: center;
+	
 }
 
 .logo h1 {
-	padding: 0.1em 0;
-	font-size: 3em;
+	padding: 1em 0.5em;
+	font-size: 2em;
 	background-color: #e1e2e3;
 	opacity: 0.7;
 }
@@ -50,6 +52,9 @@ header {
 .contacts :first-child {align-self: center;}
 
 .contacts a {color: #dadaff;}
+
+.contacts [href] {white-space: nowrap;}
+
 
 .map {
 	text-align: center;
